# ft_irc

./: .nfs0000000006c6037c00000015  .nfs0000000006c604eb00000017  CMakeLists.txt  Makefile  Server.cpp  Server.hpp  bot.sh  channel.cpp  channel.hpp  client.cpp  client.hpp  configure.sh  ircd.back  ircd.conf  ircserv  log  motd.txt  replies
.notes/: todo
includes/: ChannelUser.hpp  Server.hpp  channel.hpp  client.hpp  command.hpp  commands.hpp  exceptions.hpp  numerics.hpp  parse_conf.hpp  parse_struct.hpp  shell_colors.hpp  t_token.hpp  utils.hpp
lexer/: lexer.sh  main.cpp
srcs/: ChannelUser.cpp  Server.cpp  a.out  channel.cpp  client.cpp  command.cpp  lexer.cpp  main.cpp  numerics.cpp  parse_conf.cpp  parsing_message.cpp  t_token.cpp  ttest  ttestPING  utils.cpp
srcs/commands/: admin.hpp  away.hpp  command_not_found.hpp  info.hpp  invite.hpp  join.hpp  kick.hpp  kill.hpp  list.hpp  mode.hpp  names.hpp  nick.hpp  notice.hpp  oper.hpp  part.hpp  pass.hpp  pong.hpp  privmsg.hpp  quit.hpp  stats.hpp  time.hpp  topic.hpp  user.hpp  version.hpp  wallops.hpp  who.hpp  whois.hpp
